<resources>
    <string name="app_name" translatable="false">Qhome</string>
    <string name="FACEBOOK_APP_ID" translatable="false">549015628958528</string>
    <string name="ACCOUNT_KIT_CLIENT_TOKEN" translatable="false">e0df7b00b671d2d3abcf76e111e2f0f3</string>
    <string name="AK_LOGIN_PROTOCOL_SCHEME" translatable="false">ake0df7b00b671d2d3abcf76e111e2f0f3</string>
    <string name="log_In">Log In</string>
    <string name="choose_language">Choose a language</string>
    <string name="english">English</string>
    <string name="arabic">Arabic</string>
    <string name="settings">Settings</string>
    <string name="logout">Log Out</string>
    <string name="help">Help</string>
    <string name="favorites">Favorites</string>
    <string name="signup_login">Signup/Login</string>
    <string name="manage_account">Manage Account</string>
    <string name="notifications">Notifications</string>
    <string name="notification">Notification</string>
    <string name="enable">Enable</string>
    <string name="remember_choice">Remember choice</string>
    <string name="continue_string">Continue</string>
    <string name="agree_privacy_policy">Read &amp; Agree</string>
    <string name="terms_accept">I accept</string>
    <string name="submit">Submit</string>
    <string name="phone_verification">Phone Verification</string>
    <string name="enter_password">Enter your password.</string>
    <string name="verify">Verify</string>
    <string name="back">Back</string>
    <string name="orders">Orders</string>
    <string name="save">Save</string>
    <string name="language">Language</string>
    <string name="naql">NAQL Admin</string>
    <string name="terms_text">
        <b>Terms &amp; Conditions</b>\n\n
        By downloading or using the app, these terms will automatically apply to you – you should make sure therefore that you read them carefully before using the app.\n
        You’re not allowed to copy, or modify the app, any part of the app, or our trademarks in any way. You’re not allowed to attempt to extract the source code of the app, and you also shouldn’t try to translate the app into other languages, or make derivative versions.\n
        The app itself, and all the trade marks, copyright, database rights and other intellectual property rights related to it, still belong to Qhome.\n
        Qhome is committed to ensuring that the app is as useful and efficient as possible.\n
        For that reason, we reserve the right to make changes to the app or to charge for its services, at any time and for any reason.\n
        We will never charge you for the app or its services without making it very clear to you exactly what you’re paying for.\n
        The Qhome app stores and processes personal data that you have provided to us, in order to provide my Service.\n
        It’s your responsibility to keep your phone and access to the app secure. We therefore recommend that you do not jailbreak or root your phone, which is the process of removing software restrictions and limitations imposed by the official operating system of your device.\n
        It could make your phone vulnerable to malware\/viruses\/malicious programs, compromise your phone’s security features and it could mean that the Qhome app won’t work properly or at all.\n
        You should be aware that there are certain things that Qhome will not take responsibility for. Certain functions of the app will require the app to have an active internet connection. The connection can be Wi-Fi, or provided by your mobile network provider, but Qhome cannot take responsibility for the app not working at full functionality if you don’t have access to Wi-Fi, and you don’t have any of your data allowance left.\n
        If you’re using the app outside of an area with Wi-Fi, you should remember that your terms of the agreement with your mobile network provider will still apply. As a result, you may be charged by your mobile provider for the cost of data for the duration of the connection while accessing the app, or other third party charges.\n
        In using the app, you’re accepting responsibility for any such charges, including roaming data charges if you use the app outside of your home territory (i.e. region or country) without turning off data roaming. If you are not the bill payer for the device on which you’re using the app, please be aware that we assume that you have received permission from the bill payer for using the app.\n
        Along the same lines, Qhome cannot always take responsibility for the way you use the app i.e. You need to make sure that your device stays charged – if it runs out of battery and you can’t turn it on to avail the Service, Qhome cannot accept responsibility.\n
        With respect to Qhome’s responsibility for your use of the app, when you’re using the app, it’s important to bear in mind that although we endeavour to ensure that it is updated and correct at all times, we do rely on third parties to provide information to us so that we can make it available to you. Qhome accepts no liability for any loss, direct or indirect, you experience as a result of relying wholly on this functionality of the app.\n
        At some point, we may wish to update the app. The app is currently available on Android &amp; iOS – the requirements for both systems (and for any additional systems we decide to extend the availability of the app to) may change, and you’ll need to download the updates if you want to keep using the app. Qhome does not promise that it will always update the app so that it is relevant to you and\/or works with the Android &amp; iOS version that you have installed on your device.\n
        However, you promise to always accept updates to the application when offered to you, We may also wish to stop providing the app, and may terminate use of it at any time without giving notice of termination to you. Unless we tell you otherwise, upon any termination, (a) the rights and licenses granted to you in these terms will end; (b) you must stop using the app, and (if needed) delete it from your device.\n
        Changes to This Terms and Conditions\n
        I may update our Terms and Conditions from time to time. Thus, you are advised to review this page periodically for any changes. I will notify you of any changes by posting the new Terms and Conditions on this page. These changes are effective immediately after they are posted on this page.\n
        Qhome is not responsible by any actions that may come from any customer or producer, by entering and continuing to use this app you immediately approve on our privacy policy and terms of use terms and conditions.\n
        Contact Us\n
        If you have any questions or suggestions about my Terms and Conditions, do not hesitate to contact me at qhome974@gmail.com\n\n\n\n


        <b>Privacy Policy</b>\n\n
        Qhome built the Qhome app as an Ad Supported app.\nThis SERVICE is provided by Qhome at no cost and is intended for use as is.\n
        This page is used to inform visitors regarding my policies with the collection, use, and disclosure of Personal Information if anyone decided to use my Service.\n
        If you choose to use my Service, then you agree to the collection and use of information in relation to this policy.\nThe Personal Information that I collect is used for providing and improving the Service. I will not use or share your information with anyone except as described in this Privacy Policy.\n
        The terms used in this Privacy Policy have the same meanings as in our Terms and Conditions, which is accessible at Qhome unless otherwise defined in this Privacy Policy.\n
        Information Collection and Use\n\n
        For a better experience, while using our Service, I may require you to provide us with certain personally identifiable information, including but not limited to Phone number, Name, Email address, Address, and other info . The information that I request will be retained on your device and is not collected by me in any way.
        The app does use third party services that may collect information used to identify you.\n
        Link to privacy policy of third party service providers used by the app\n
        Log Data\n
        I want to inform you that whenever you use my Service, in a case of an error in the app I collect data and information (through third party products) on your phone called Log Data.\nThis Log Data may include information such as your device Internet Protocol (\"IP\") address, device name, operating system version, the configuration of the app when utilizing my Service, the time and date of your use of the Service, and other statistics.\n
        Cookies\n
        Cookies are files with a small amount of data that are commonly used as anonymous unique identifiers.\nThese are sent to your browser from the websites that you visit and are stored on your device\'s internal memory.\n
        This Service does not use these \"cookies\" explicitly.\nHowever, the app may use third party code and libraries that use \"cookies\" to collect information and improve their services. You have the option to either accept or refuse these cookies and know when a cookie is being sent to your device.\nIf you choose to refuse our cookies, you may not be able to use some portions of this Service.\n
        Service Providers\n
        I may employ third-party companies and individuals due to the following reasons:\n
        To facilitate our Service\n
        To provide the Service on our behalf\n
        To perform Service-related services or\n
        To assist us in analyzing how our Service is used.\n
        I want to inform users of this Service that these third parties have access to your Personal Information.\nThe reason is to perform the tasks assigned to them on our behalf. However, they are obligated not to disclose or use the information for any other purpose.\n
        Security\n
        I value your trust in providing us your Personal Information, thus we are striving to use commercially acceptable means of protecting it. But remember that no method of transmission over the internet, or method of electronic storage is 100% secure and reliable, and I cannot guarantee its absolute security.\n
        Links to Other Sites\n
        This Service may contain links to other sites. If you click on a third-party link, you will be directed to that site. Note that these external sites are not operated by me. Therefore, I strongly advise you to review the Privacy Policy of these websites. I have no control over and assume no responsibility for the content, privacy policies, or practices of any third-party sites or services.\n
        Children\'s Privacy\n
        These Services do not address anyone under the age of 13. I do not knowingly collect personally identifiable information from children under 13. In the case I discover that a child under 13 has provided me with personal information, I immediately delete this from our servers. If you are a parent or guardian and you are aware that your child has provided us with personal information, please contact me so that I will be able to do necessary actions.\n
        Changes to This Privacy Policy\n
        I may update our Privacy Policy from time to time. Thus, you are advised to review this page periodically for any changes. I will notify you of any changes by posting the new Privacy Policy on this page. These changes are effective immediately after they are posted on this page.\n
        Qhome is not responsible by any actions that may come from any customer or producer, by entering and continuing to use this app you immediately approve on our privacy policy and terms of use terms and conditions.\n
        Contact Us\n
        If you have any questions or suggestions about my Privacy Policy, do not hesitate to contact me at qhome974@gmail.com\n


    </string>
</resources>