<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".main.TermsActivity">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="65dp"
        android:background="@drawable/toolbar_shadow"
        android:orientation="horizontal">
        <TextView
            android:id="@+id/title"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:visibility="visible"
            android:text="@string/agree_privacy_policy"
            android:gravity="center"
            android:textSize="22sp"
            android:textColor="@color/colorPrimary"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingBottom="30dp"
        android:orientation="vertical">
        <com.myapp.qhome.classes.ScrollViewExt
            android:id="@+id/scrollView"
            android:layout_width="match_parent"
            android:layout_height="0px"
            android:layout_weight="1">
            <TextView
                android:id="@+id/text"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingLeft="20dp"
                android:paddingRight="20dp"
                android:paddingTop="30dp"
                android:paddingBottom="20dp"
                android:textSize="16sp"
                android:textColor="#2C2C2C"
                android:text="@string/terms_text"/>
        </com.myapp.qhome.classes.ScrollViewExt>
        <TextView
            android:id="@+id/btn_accept"
            android:layout_width="150dp"
            android:layout_height="60dp"
            android:text="@string/terms_accept"
            android:visibility="gone"
            android:onClick="acceptTerms"
            android:gravity="center"
            android:textSize="18sp"
            android:background="@drawable/circular_shadow"
            android:layout_marginTop="20dp"
            android:layout_marginRight="20dp"
            android:layout_gravity="right"
            android:textColor="@color/colorPrimary"/>
    </LinearLayout>
</LinearLayout>
























