<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".main.PhoneVerifyActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <TextView
            android:id="@+id/title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="30dp"
            android:layout_marginTop="100dp"
            android:text="@string/phone_verification"
            android:gravity="center"
            android:textStyle="bold"
            android:textSize="25sp"
            android:textAllCaps="true"
            android:textColor="@color/colorPrimary"/>

        <ImageView
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="50dp"
            android:src="@drawable/phone_auth"/>

        <TextView
            android:id="@+id/btn_verify"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:text="@string/verify"
            android:textColor="#ffffff"
            android:textSize="19dp"
            android:gravity="center"
            android:onClick="verify"
            android:layout_marginTop="80dp"
            android:layout_marginLeft="50dp"
            android:layout_marginRight="50dp"
            android:background="@drawable/button_shadow"/>

        <LinearLayout
            android:onClick="back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="30dp"
            android:orientation="horizontal">
            <ImageView
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:src="@drawable/leftarrow_marron"
                android:layout_gravity="center_vertical"/>
            <TextView
                android:id="@+id/btn_back"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="5dp"
                android:text="@string/back"
                android:textSize="18sp"
                android:textColor="@color/colorPrimary"/>
        </LinearLayout>

    </LinearLayout>

    <com.wang.avi.AVLoadingIndicatorView
        android:id="@+id/loading_bar"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_gravity="center"
        android:visibility="gone"
        app:indicator="LineScaleParty"
        app:indicator_color="#F53700" />

</FrameLayout>




























