<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/white_rect_fill">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/bg_alert_header">
            <de.hdodenhof.circleimageview.CircleImageView
                android:layout_width="35dp"
                android:layout_height="35dp"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="15dp"
                android:src="@drawable/naql"/>
            <TextView
                android:id="@+id/title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/log_In"
                android:textSize="22sp"
                android:textStyle="bold"
                android:textColor="#fff"
                android:layout_margin="15dp"
                android:singleLine="true"
                android:ellipsize="end"
                android:layout_gravity="center"/>
            <ImageView
                android:id="@+id/btn_cancel"
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:padding="3dp"
                android:src="@drawable/cancelicon"
                android:layout_gravity="right"
                android:layout_marginTop="8dp"
                android:layout_marginRight="8dp"/>
        </FrameLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="20dp"
            android:orientation="vertical">
            <EditText
                android:id="@+id/passwordBox"
                android:layout_margin="15dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/enter_password"
                android:textColorHint="@color/lightPrimary"
                android:background="@drawable/primary_rect_stroke"
                android:singleLine="true"
                android:textSize="16sp"
                android:paddingTop="12dp"
                android:paddingLeft="20dp"
                android:paddingBottom="12dp"
                android:paddingRight="16dp"
                android:textColor="@color/colorPrimary"/>
            <TextView
                android:id="@+id/btn_submit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/submit"
                android:textColor="@color/colorPrimary"
                android:textSize="18sp"
                android:padding="8dp"
                android:gravity="center"/>
        </LinearLayout>
    </LinearLayout>
</FrameLayout>





























