<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/title"
            android:layout_width="match_parent"
            android:layout_height="65dp"
            android:gravity="center"
            android:textSize="22sp"
            android:background="@drawable/toolbar_shadow"
            android:textColor="@color/colorPrimary"
            android:text="@string/choose_language"/>

        <ImageView
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:src="@mipmap/logo"
            android:visibility="visible"
            android:layout_marginTop="20dp"
            android:layout_gravity="center_horizontal"/>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:layout_gravity="center_horizontal"
            android:background="@drawable/white_rect_shadow"
            android:orientation="horizontal">
            <FrameLayout
                android:id="@+id/lyt_english"
                android:layout_width="wrap_content"
                android:layout_weight="1"
                android:paddingTop="5dp"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:layout_height="wrap_content"
                android:onClick="setupEn">
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:orientation="vertical">
                    <de.hdodenhof.circleimageview.CircleImageView
                        android:id="@+id/img_en"
                        android:layout_width="140dp"
                        android:layout_height="140dp"
                        android:layout_marginTop="10dp"
                        app:civ_border_width="6dp"
                        app:civ_border_color="#FFC107"
                        android:layout_gravity="center_horizontal"
                        android:src="@drawable/en_flag"/>
                    <TextView
                        android:id="@+id/txt_en"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="18sp"
                        android:layout_margin="10dp"
                        android:textColor="@color/colorPrimary"
                        android:text="@string/english"
                        android:layout_gravity="center_horizontal"/>
                </LinearLayout>
            </FrameLayout>

            <View
                android:layout_width="1dp"
                android:layout_height="match_parent"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="20dp"
                android:background="#ECECEC"/>

            <FrameLayout
                android:id="@+id/lyt_arabic"
                android:layout_width="wrap_content"
                android:layout_weight="1"
                android:paddingTop="5dp"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:layout_height="wrap_content"
                android:visibility="visible"
                android:onClick="setupAr">
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:orientation="vertical">
                    <de.hdodenhof.circleimageview.CircleImageView
                        android:id="@+id/img_ar"
                        android:layout_width="140dp"
                        android:layout_height="140dp"
                        android:layout_marginTop="10dp"
                        app:civ_border_width="5dp"
                        app:civ_border_color="#FCF8D8"
                        android:layout_gravity="center_horizontal"
                        android:src="@drawable/qr_flag"/>
                    <TextView
                        android:id="@+id/txt_ar"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="18sp"
                        android:textColor="@color/colorPrimary"
                        android:text="@string/arabic"
                        android:layout_margin="10dp"
                        android:layout_gravity="center_horizontal"/>
                </LinearLayout>
            </FrameLayout>
        </LinearLayout>

        <LinearLayout
            android:visibility="visible"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="70dp"
            android:layout_marginTop="20dp"
            android:orientation="horizontal">
            <CheckBox
                android:id="@+id/remember"
                android:layout_width="wrap_content"
                android:layout_height="35dp"
                android:text="@string/remember_choice"
                android:textColor="@color/colorPrimary"
                android:button="@null"
                android:checked="false"
                android:drawableLeft="@drawable/checkboxselector"
                android:drawablePadding="10dp"/>
        </LinearLayout>

        <TextView
            android:id="@+id/continueButton"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:layout_marginLeft="50dp"
            android:layout_marginRight="50dp"
            android:text="@string/continue_string"
            android:textColor="#fff"
            android:textSize="19dp"
            android:gravity="center"
            android:onClick="next"
            android:layout_marginTop="30dp"
            android:background="@drawable/button_shadow"/>

    </LinearLayout>
</FrameLayout>